--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,44 @@
+# 应用名称（可用于日志、邮件等标识）
 APP_NAME=Essentials
+
+# 服务监听端口
 LISTEN_PORT=8787
+
+# 是否开启调试模式（1=开启，0=关闭）
 DEBUG=1
+
+# 应用默认时区
 TIMEZONE=Asia/Shanghai
 
+# 应用的基础访问地址（用于生成链接等）
 APP_URL=http://127.0.0.1:8787
+
+# 图片或静态资源访问路径（如头像、图标）
 IMAGE_URL=http://127.0.0.1:8787/assets
 
-AES_KEY=6jqvnd8SHT2u288w
-AES_IV=abc1232IF866nji7
-SIGN_KEY=aJeE7zY27AoJEEIS6l8hRkSK5As9Fh2v
+# 错误信息推送地址（如日志系统Webhook地址，留空则不会触发）
+ERROR_WEBHOOK_URL=http://your-webhook-url.com
 
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=essentials
-DB_USERNAME=root
-DB_PASSWORD=password
-DB_CHARSET=utf8mb4
-DB_COLLATION=utf8mb4_general_ci
+# AES 加密的密钥（16位）
+AES_KEY=your_aes_key_here
 
-REDIS_HOST=127.0.0.1
-REDIS_PORT=6379
-REDIS_DEFAULT_DB=0
-REDPS_PASSWORD=
+# AES 加密的初始化向量（IV，必须与加密方式匹配）
+AES_IV=your_aes_iv_here
+
+# 签名密钥，用于接口签名校验（32位）
+SIGN_KEY=your_sign_key_here
+
+# 数据库连接配置
+DB_HOST=127.0.0.1                   # 数据库地址
+DB_PORT=3306                        # 数据库端口
+DB_DATABASE=essentials              # 数据库名称
+DB_USERNAME=root                    # 数据库用户名
+DB_PASSWORD=your_password           # 数据库密码
+DB_CHARSET=utf8mb4                  # 数据库字符集
+DB_COLLATION=utf8mb4_general_ci     # 数据库排序规则
+
+# Redis 配置
+REDIS_HOST=127.0.0.1         # Redis 服务器地址
+REDIS_PORT=6379              # Redis 端口
+REDIS_DEFAULT_DB=0           # 默认使用的 Redis DB 库编号
+REDIS_PASSWORD=              # Redis 密码（如无可留空）
