--- a/.env.example
+++ b/.env.example
@@ -26,7 +26,10 @@ AES_KEY=your_aes_key_here
 AES_IV=your_aes_iv_here
 
 # 签名密钥，用于接口签名校验（32位）
-SIGN_KEY=your_sign_key_here
+APP_KEY=your_sign_key_here
+
+# 接口请求过期时间（秒）
+DEFAULT_TIMESTAMP_DIFF=30
 
 # 数据库连接配置
 DB_HOST=127.0.0.1                   # 数据库地址
