--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
     "vlucas/phpdotenv": "^5.6",
     "workerman/crontab": "^1.0",
     "revolt/event-loop": "^1.0",
-    "robmorgan/phinx": "^0.16.6"
+    "robmorgan/phinx": "^0.16.6",
+    "hejunjie/encrypted-request": "^0.0.1"
   },
   "suggest": {
     "ext-event": "For better performance. "
